--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bignumber.js": "^9.0.0",
     "chart.js": "^2.9.4",
     "clock-uikit": "^0.2.4",
+    "ethereumjs-abi": "^0.6.8",
     "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
